--- a/app/src/main/res/layout-land/fragment_running_main.xml
+++ b/app/src/main/res/layout-land/fragment_running_main.xml
@@ -120,9 +120,10 @@
                         android:textColor="@color/white" />
                     <TextView
                         android:id="@+id/running_bmp"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="000"
+                        android:gravity="center"
                         android:textColor="@color/white"
                         android:textSize="50px"
                         android:textStyle="bold" />
